<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_sub"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/edit_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:contentDescription="@string/profile_picture"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/tap_image_to_edit"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginBottom="15sp"/>

        <EditText
            android:id="@+id/edit_profile_display_name"
            android:hint="@string/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:minHeight="48dp"
            android:autofillHints=""
            android:textColorHint="#757575"
            android:inputType="text" />

        <Button
            android:id="@+id/edit_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/save"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>