<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_sub"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="5sp"
            android:autofillHints=""
            android:hint="@string/enter_username"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/search_friend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/search_button"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/friend_to_add_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:contentDescription="@string/profile_picture"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/friend_to_add_display_name"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="8sp"/>

        <TextView
            android:id="@+id/friend_to_add_username"
            android:text=""
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="8sp"/>

        <Button
            android:id="@+id/add_friend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/add_this_user"
            android:visibility="gone"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>