<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_sub"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/change_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:minHeight="48dp"
            android:autofillHints=""
            android:textColorHint="#757575"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/change_password_confirm"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:minHeight="48dp"
            android:autofillHints=""
            android:textColorHint="#757575"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/change_password_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/save"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>